workloads/bumpin-time/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bumpin-time
  namespace: media
  labels:
    app: bumpin-time
spec:
  selector:
    matchLabels:
      app: bumpin-time
  template:
    metadata:
      labels:
        app: bumpin-time
    spec:
      containers:
      - name: bumpin-time
        image: quay.io/cjlarose/bumpin-time:v2.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
