workloads/bumpin-time/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bumpin-time-http-load-balancer-service
  namespace: media
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: bumpin-time
  loadBalancerIP: 172.16.20.23
