workloads/bumpin-time/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bumpin-time-service
  namespace: media
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: bumpin-time
